--- a/src/app/post/[slug]/page.module.scss
+++ b/src/app/post/[slug]/page.module.scss
@@ -69,12 +69,16 @@
 }
 
 .markdown ol {
-  list-style-type: decimal;
+  list-style-type: disc;
 }
 
 .markdown li {
-  margin: -0.5rem 0.5rem -0.5rem;
+  margin: -0.3rem 0.5rem -0.5rem 0;
   line-height: 1.3;
+}
+
+.markdown ul + pre {
+  margin-left: 2rem;
 }
 
 /* 코드 블록 스타일 */
@@ -239,13 +243,6 @@
   font-weight: 600;
 }
 
-
-////////////////////////////////////////////////////////////////////////////////
-// tablet
-////////////////////////////////////////////////////////////////////////////////
-@media screen and (max-width: 1024px) {
-}
-
 ////////////////////////////////////////////////////////////////////////////////
 // mobile
 ////////////////////////////////////////////////////////////////////////////////
@@ -290,8 +287,12 @@
   }
 
   .markdown li {
-    margin: 0.2rem 0.2rem -0.5rem;
+    margin: 0.5rem 0.1rem -0.5rem;
     line-height: 1;
+  }
+
+  .markdown ul + pre {
+    margin-left: 1.7rem;
   }
 
   .markdown pre {
