모바일 검색 영역 오류 수정

--- a/src/components/layout/SearchSidebar.module.scss
+++ b/src/components/layout/SearchSidebar.module.scss
@@ -376,11 +376,13 @@
   max-height: calc(100vh - 120px);
 }
 
-@media (max-width: 768px) {
+@media (min-width: 769px) {
   .mobileFixedHeader, .mobileScrollArea {
     display: none !important;
   }
+}
 
+@media (max-width: 768px) {
   .sidebar {
     width: 100%;
     top: 56px;
