--- a/src/components/layout/Footer.module.scss
+++ b/src/components/layout/Footer.module.scss
@@ -21,7 +21,7 @@
 
 .copyright {
   color: var(--text-secondary);
-  font-size: 0.7rem;
+  font-size: var(--body-small);
 }
 
 .links {
@@ -32,7 +32,7 @@
 .link {
   color: var(--text-secondary);
   text-decoration: none;
-  font-size: 0.7rem;
+  font-size: var(--body-small);
   transition: color 0.2s;
 
   &:hover {
