--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -39,8 +39,8 @@ body {
   overflow-x: hidden;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  line-height: 1.6;
-  font-size: 16px;
+  line-height: var(--line-height-normal);
+  font-size: var(--font-size-base);
 }
 
 a {
@@ -63,7 +63,7 @@ pre {
 
 code {
   font-family: 'JetBrains Mono', monospace;
-  font-size: 0.9em;
+  font-size: var(--code-small);
 }
 
 blockquote {
@@ -76,31 +76,31 @@ blockquote {
 
 h1, h2, h3, h4, h5, h6 {
   margin: 1.5rem 0 1rem;
-  line-height: 1.3;
+  line-height: var(--line-height-tight);
 }
 
 h1 {
-  font-size: 2.5rem;
+  font-size: var(--heading-1);
 }
 
 h2 {
-  font-size: 2rem;
+  font-size: var(--heading-2);
 }
 
 h3 {
-  font-size: 1.75rem;
+  font-size: var(--heading-3);
 }
 
 h4 {
-  font-size: 1.5rem;
+  font-size: var(--heading-4);
 }
 
 h5 {
-  font-size: 1.25rem;
+  font-size: var(--heading-5);
 }
 
 h6 {
-  font-size: 1rem;
+  font-size: var(--heading-6);
 }
 
 p {
@@ -130,7 +130,7 @@ th, td {
 
 th {
   background-color: var(--hover);
-  font-weight: 600;
+  font-weight: var(--font-weight-semibold);
 }
 
 hr {
