--- a/src/app/post/[slug]/page.module.scss
+++ b/src/app/post/[slug]/page.module.scss
@@ -99,6 +99,7 @@
   color: inherit;
   padding: 0;
   font-size: var(--code-small);
+  line-height: var(--line-height-tight);
 }
 
 /* 인라인 코드 스타일 (`code`) */
@@ -110,7 +111,7 @@
   border-radius: 3px;
   padding: 0.1em 0.2em;
   vertical-align: middle;
-  line-height: 1;
+  line-height: var(--line-height-tight);
 }
 
 /* 블록 인용 스타일 */
