fix: PC 본문 max-width를 850px로 확대 (가독성 및 디자인 개선)

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -9,7 +9,7 @@
 }
 
 .container {
-  max-width: 1200px;
+  max-width: 850px;
   margin: 0 auto;
   padding: 0 1rem;
 }
@@ -230,5 +230,11 @@
   .postCard:hover, .tagPill:hover {
     box-shadow: none;
     background: inherit;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    max-width: 100%;
   }
 }
