--- a/src/app/layout.module.scss
+++ b/src/app/layout.module.scss
@@ -64,7 +64,7 @@
 .content {
   flex: 1;
   width: 100%;
-  max-width: 800px;
+  max-width: 850px;
   margin: 0 auto;
   padding: 0 1rem;
 }
@@ -100,6 +100,7 @@
   }
 
   .content {
+    max-width: 100%;
     padding: 0;
   }
 }
