--- a/src/app/post/[slug]/page.module.scss
+++ b/src/app/post/[slug]/page.module.scss
@@ -169,7 +169,7 @@
 }
 
 .container {
-  max-width: 800px;
+  max-width: 850px;
   margin: 0 auto;
   padding: 2.5rem 1.5rem 4rem 1.5rem;
   background: var(--background);
@@ -339,6 +339,7 @@
   }
 
   .container {
+    max-width: 100%;
     padding: 1.5rem 0.5rem 2rem 0.5rem;
   }
 
