--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -31,14 +31,14 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: var(--font-mono);
 }
 
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: var(--font-mono);
   line-height: var(--line-height-normal);
   font-size: var(--font-size-base);
 }
