--- a/src/app/post/[slug]/page.module.scss
+++ b/src/app/post/[slug]/page.module.scss
@@ -93,6 +93,7 @@
   line-height: var(--line-height-normal);
 }
 
+/* 블록 코드만 별도 스타일 */
 .markdown pre code {
   display: block;
   background: none;
@@ -100,9 +101,13 @@
   padding: 0;
   font-size: var(--code-small);
   line-height: var(--line-height-tight);
+  border-radius: 0;
+  box-shadow: none;
+  border: none;
+  margin: 0;
 }
 
-/* 인라인 코드 스타일 (`code`) */
+/* 인라인 코드만 별도 스타일 */
 .markdown code {
   font-family: var(--font-mono);
   font-size: var(--code-small);
@@ -112,6 +117,9 @@
   padding: 0.1em 0.2em;
   vertical-align: middle;
   line-height: var(--line-height-tight);
+  box-shadow: none;
+  border: none;
+  margin: 0;
 }
 
 /* 블록 인용 스타일 */
