feat: 다크모드 UX 개선(헤더/버튼/TOC/인라인코드/스타일/SSR불일치 해결)

--- a/src/app/post/[slug]/page.module.scss
+++ b/src/app/post/[slug]/page.module.scss
@@ -121,6 +121,10 @@
   border: none;
   margin: 0;
 }
+[data-theme='dark'] .markdown code {
+  background: #2d2f34;
+  color: #e06c75;
+}
 
 /* 블록 인용 스타일 */
 .markdown blockquote {
